# my-claude-code

./: README.md  agent.md  package-lock.json  package.json  server.json
python_rewrite/: README.md  pyproject.toml
python_rewrite/claude_code/: __init__.py  command_registry.py  cost_tracker.py  history.py  main.py  query_engine.py  setup.py  tool.py  tools.py
python_rewrite/claude_code/bootstrap/: __init__.py  state.py
python_rewrite/claude_code/bridge/: bridge_api.py  bridge_config.py  bridge_main.py  bridge_messaging.py  jwt_utils.py  session_runner.py  types.py
python_rewrite/claude_code/cli/: print_utils.py  structured_io.py  update.py
python_rewrite/claude_code/commands/: __init__.py
python_rewrite/claude_code/components/: __init__.py  message_display.py  permission_prompt.py  prompt_input.py  sidebar.py  spinner.py  status_bar.py  tool_display.py
python_rewrite/claude_code/constants/: __init__.py  api_limits.py  common.py  error_ids.py  figures.py  files.py  keys.py  oauth.py  product.py  prompts.py  query_source.py  system.py  tools.py  xml.py
python_rewrite/claude_code/context/: __init__.py  context.py  mailbox.py  notifications.py
python_rewrite/claude_code/coordinator/: coordinator.py  types.py
python_rewrite/claude_code/daemon/: daemon.py
python_rewrite/claude_code/entrypoints/: __init__.py  cli.py
python_rewrite/claude_code/hooks/: use_can_use_tool.py
python_rewrite/claude_code/ink/: __init__.py
python_rewrite/claude_code/jobs/: job_manager.py
python_rewrite/claude_code/keybindings/: __init__.py  keybindings.py
python_rewrite/claude_code/memdir/: memory.py  memory_utils.py
python_rewrite/claude_code/migrations/: migration_runner.py
python_rewrite/claude_code/outputstyles/: __init__.py
python_rewrite/claude_code/plugins/: plugin_loader.py  plugin_runner.py  types.py
python_rewrite/claude_code/proactive/: proactive.py
python_rewrite/claude_code/query/: __init__.py  config.py  query.py  stop_hooks.py  token_budget.py  transitions.py
python_rewrite/claude_code/remote/: remote.py
python_rewrite/claude_code/schemas/: __init__.py  hooks.py
python_rewrite/claude_code/screens/: __init__.py  config_screen.py  repl.py  setup_screen.py  transcript_screen.py
python_rewrite/claude_code/server/: server.py
python_rewrite/claude_code/services/: __init__.py  notifier.py
python_rewrite/claude_code/shims/: __init__.py  feature_flags.py
python_rewrite/claude_code/skills/: skill_loader.py  skill_runner.py  types.py
python_rewrite/claude_code/ssh/: ssh.py
python_rewrite/claude_code/state/: __init__.py  app_state.py  on_change_app_state.py  selectors.py  store.py
python_rewrite/claude_code/tasks/: local_agent_task.py  local_shell_task.py  remote_agent_task.py  task.py  task_manager.py
python_rewrite/claude_code/tools/: __init__.py  utils.py
python_rewrite/claude_code/types/: __init__.py  command.py  hooks.py  ids.py  message.py  permissions.py  plugin.py  tools.py
python_rewrite/claude_code/utils/: commit_attribution.py  debug.py  file_history.py  file_state_cache.py  git.py  model_cost.py  system_prompt.py  theme.py  thinking.py  tool_result_storage.py
python_rewrite/claude_code/vim_mode/: __init__.py  (+1 more)
(+264 files in other folders)
